# QueryQuest

./: .dockerignore  .gitignore  .provider_setup.json  DECISIONS.md  Dockerfile  README.md  Real Estate Listings.xlsx  app_config.py  chainlit_app.py  chat_session.py  cli.py  history.json  logger.py  logs  main.py  pyproject.toml  qq.bat  read_excel_files.py  setup_flow.py  sql_excution.py  sql_handoff.py  sql_preview.py  state.py  temporary_sql_input.json
docs/: DECISIONS.md
docs/superpowers/specs/: 2026-06-08-logging-system-design.md
excelagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
excels_files/: Marketing Campaigns.xlsx  Real Estate Listings.xlsx
src/queryquest/: app.py  chat_session.py  cli.py  config.py
src/queryquest/core/: __init__.py  engine.py  llm.py  models.py  policy.py
src/queryquest/excel/: context.py
src/queryquest/sql/: execution.py  executor.py  handoff.py  preview.py  registry.py  rewrite.py  validation.py  writeback.py
src/queryquest/web/: __init__.py  render.py
tests/: test_chat_session.py  test_core_engine.py  test_policy.py  test_sql_executor.py  test_sql_handoff.py  test_sql_preview.py  test_sql_rewrite_join.py  test_sql_validation.py  test_web_render.py
