[project]
name = "queryquest"
version = "0.1.0"
description = "Natural-language to SQL assistant for Excel workbooks, backed by DuckDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.11.1",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2,<4",
    "rich>=14.1.0",
]

[project.scripts]
qq = "queryquest.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
